2016-09-29 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/debug/ipmi-debug-lan.c (_ipmi_dump_lan_packet):
	Clear data on obj_session_hdr not obj_lan_msg_hdr.

2016-09-29 Albert Chu <chu11@llnl.gov>

	* ipmipower/ipmipower_powercmd.c (_recv_packet),
	libfreeipmi/debug/ipmi-debug-rmcpplus.c (_dump_rmcpplus_session_trlr),
	libipmiconsole/ipmiconsole_processing.c (_receive_packet),
	libipmiconsole/ipmiconsole_packet.c (ipmiconsole_sol_packet_assemble),
	libipmiconsole/ipmiconsole_processing.c (_sol_bmc_to_remote_console_packet):
	Remove unnecessary fiid obj clear for security purposes.
	
2016-09-29 Albert Chu <chu11@llnl.gov>

	* bmc-info/bmc-info.c (display_system_info_common),
	bmc-device/bmc-device.c (set_system_info_common),
	ipmi-config/ipmi-config-category-pef-alert-string.c (alert_string_checkout),
	ipmi-dcmi/ipmi-dcmi.c (_sensor_info_output),
	ipmi-oem/ipmi-oem/ipmi-oem-dell.c (_get_dell_system_info_long_string), 
	ipmi-oem/ipmi-oem-thirdparty.c (ipmi_oem_thirdparty_get_system_info_block_pstring,
	ipmi_oem_thirdparty_get_account_status): Remove unnecessary fiid object
	clear which is also done in unassemble deep in API.

	* ipmi-oem/ipmi-oem-inventec.c (_ipmi_oem_inventec_read_eeprom_at24c256n,
	_ipmi_oem_inventec_clear_eeprom_at24c256n), ipmi-oem/ipmi-oem-quanta.c
	(_ipmi_oem_quanta_read_mac_address_s99q, _ipmi_oem_quanta_write_mac_address_s99q):
	Remove useless fiid obj clear call.

	* libfreeipmi/interface/ipmi-rmcpplus-interface.c (assemble_ipmi_rmcpplus_pkt),
	libfreeipmi/fru/ipmi-fru.c (_read_fru_data),
	libfreeipmi/debug/ipmi-debug-rmcpplus.c (_dump_rmcpplus_payload_data):
	Remove unnecessary fiid obj clears.

2016-09-29 Albert Chu <chu11@llnl.gov>
	
	* ipmipower/ipmipower_packet.c (ipmipower_packet_store,
	_ipmi_1_5_packet_create, _ipmi_2_0_packet_create): Remove unnecessary
	fiid object clears which are already done inside the fill & unassemble
	functions.

	* libipmiconsole/ipmiconsole_packet.c (_ipmi_1_5_packet_assemble,